fix(navigation-primary): hide wordmark in sub-domain logo via SVG path instead of overflow clipping

--- a/elements/rh-navigation-primary/rh-navigation-primary.css
+++ b/elements/rh-navigation-primary/rh-navigation-primary.css
@@ -556,13 +556,9 @@
           block-size: 30px;
           inline-size: 40px;
         }
-      }
 
-      & a {
-        &:is(:hover, :focus) {
-          & svg {
-            transform: rotate(15deg);
-          }
+        & #wordmark {
+          display: none;
         }
       }
     }
